# com760Group30

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: group30Bot.rviz  group30Bot_gazebo.launch  school_rescue_bug2.launch  school_rescue_ql.launch
msg/: RLAction.msg  RLReward.msg  SurvivorDetected.msg
scripts/: Bug2.py  FollowWall.py  GoToPoint.py  QLearning.py  SurvivorDetector.py
srv/: MineRescueSetBugStatus.srv  MineRescueSetQLStatus.srv
urdf/: com760Bot.urdf  group30Bot.gazebo  group30Bot.xacro  group30Bot_gazebo.launch  macros.xacro  materials.xacro
world/: school_rescue.world
